fe_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend-1
  name: frontend-1
  namespace: frontend
spec:
  host: frontend-1-frontend.apps.ocp.sandbox1738.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: frontend-1
    weight: 100
  wildcardPolicy: None
